[package]
name = "tent"
description = "A lightweight XML template engine"
license = "MIT"
version = "0.0.7"
authors = ["inkyu <gofiri@gmail.com>"]
edition = "2018"

[dependencies.tent_codegen]
path = "./codegen"
version = "0"

[workspace]
members = [".", "codegen"]

[dev-dependencies]
failure = "0.1"
