[package]
name = "tent"
description = "A lightweight XML template engine"
license = "MIT"
version = "0.0.10"
authors = ["inkyu <gofiri@gmail.com>"]
edition = "2021"

[dependencies.tent_codegen]
path = "./codegen"
version = "0"

[workspace]
members = [".", "codegen"]

[dev-dependencies]
failure = "0.1"
